--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,7 +40,7 @@ jobs:
         echo "$HOME/.poetry/bin" >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        apt install libhdf5-dev
+        sudo apt install libhdf5-dev
         poetry install --no-interaction
     - name: Test with pytest
       run: |
